Enables SetFirstSetupComplete before init

If SetFirstSetupComplete was called before engine initialization,
we'd record wrong UMA histograms and called DataTypeManager::Configure
with wrong configure reason.

The Yandex Browser wants to able to do this because in some signin scripts,
for example corporate browser, user do not need to change sync channels.
In this scenario RequestStart and SetFirstSetupComplete calls happpens
simultaneously.

Bug: 867451
Change-Id: Iec326c542476adf42c291cf2e002fc52e0a7b99d
Reviewed-on: https://chromium-review.googlesource.com/1150175
Commit-Queue: Aleksei Loshkarev <lixan@yandex-team.ru>
Reviewed-by: Marc Treib <treib@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578328}
Former-commit-id: 913997b0e0c5f1a2c5e62c9ea8276184f0737629