components/browser_sync/profile_sync_service_unittest.cc
@@ -248,6 +248,7 @@ class ProfileSyncServiceTest : public ::testing::Test {
     // Set first sync time before initialize to simulate a complete sync setup.
     syncer::SyncPrefs sync_prefs(prefs());
     sync_prefs.SetFirstSyncTime(base::Time::Now());
+    sync_prefs.SetLastSyncedTime(base::Time::Now());
     sync_prefs.SetFirstSetupComplete();
     sync_prefs.SetKeepEverythingSynced(true);
     service_->Initialize();
